# docx2prompt

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
.github/workflows/: R-CMD-check.yaml
R/: docx2prompt-package.R  extraer_feedback.R  find_python.R  vaciar_feedback.R
inst/python/: extraer_comentarios.py
man/: docx2prompt-package.Rd  extraer_feedback.Rd  vaciar_feedback.Rd
man/figures/: README.md
python/: README.md  pyproject.toml
python/src/docx2prompt/: __init__.py  __main__.py  cli.py  core.py
python/src/docx2prompt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/tests/: test_core.py
python/tests/fixtures/: _smoke.md  comentarios_minimos.docx
tests/: testthat.R
tests/testthat/: test-extraer_feedback.R  test-find_python.R  test-vaciar_feedback.R
tests/testthat/fixtures/: make_empty_docx.py  make_fixture_docx.py  sin_comentarios.docx
